[package]
name = "cuna"
version = "0.2.0"
authors = ["snylonue <snylonue@gmail.com>"]
edition = "2018"
description = "A simple cue parser"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/snylonue/cuna"
repository = "https://github.com/snylonue/cuna"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "5"
thiserror = "1"
num-traits = "0.2"