[package]
name = "cuna"
version = "0.5.0"
authors = ["snylonue <snylonue@gmail.com>"]
edition = "2018"
description = "A simple cue parser"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/snylonue/cuna"
repository = "https://github.com/snylonue/cuna"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "6"
thiserror = "1"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "cuna"
harness = false